fix(client) : dropdown overflow && close on select

--- a/client/src/Styles/components/_dropdown.scss
+++ b/client/src/Styles/components/_dropdown.scss
@@ -9,7 +9,10 @@
   color: white;
   font-size: 16px;
   border: none;
-  cursor: pointer;
+  cursor: pointer; 
+
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 /* Dropdown button on hover & focus */
@@ -21,6 +24,7 @@
 .dropdown {
   position: relative;
   display: inline-block;
+  width: 150px;
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -41,6 +45,11 @@
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+}
+
+.dropdown-content .dropdown-item
+{
+  cursor: pointer;
 }
 
 /* Change color of dropdown links on hover */
